--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,14 +4,14 @@ publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.0.0 <4.0.0'
+  sdk: ^3.8.0
 
 dependencies:
   flutter:
     sdk: flutter
-  file_saver: ^0.2.0
 
-  # Merged from both projects
+  # Existing (as-is)
+  file_saver: ^0.2.0
   http: ^1.1.0
   shared_preferences: ^2.2.0
   intl: ^0.18.1
@@ -25,10 +25,13 @@ dependencies:
   geocoding: ^4.0.0
   cupertino_icons: ^1.0.2
 
-  # ✅ NEWLY ADDED
+  # Network / system
   connectivity_plus: ^6.0.3
   path_provider: ^2.1.5
   path: ^1.9.1
+
+  # For Downloads folder (MediaStore)
+  mime: ^1.0.4
 
 dev_dependencies:
   flutter_test:
@@ -39,13 +42,12 @@ dev_dependencies:
 flutter_launcher_icons:
   android: "launcher_icon"
   ios: true
-  image_path: "assets/images/smartnexlogo.jpg"
-  min_sdk_android: 21 # optional
+  image_path: "assets/images/logo.png"
+  min_sdk_android: 21
 
 flutter:
   uses-material-design: true
 
-  # Add your assets
   assets:
     - assets/images/
     - assets/lottie/
